Update Cargo.toml and LICENSE

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "watchy"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
+repository = "https://github.com/jdhouseholder/watchy"
+categories = ["command-line-utilities"]
 
 [dependencies]
 chrono = "0.4.39"
